--- a/app/views/index2.html
+++ b/app/views/index2.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    this is index1 page
-    <a href="index2.html">index2</a>
+    this is index2 page
+    <a href="index.html">index</a>
 </body>
 
 </html>
