--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>星科ERP</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css" />
-    <script type="text/javascript" src="../static/js/app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>星科ERP系统</title>
+    <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
+    <script type="text/javascript" src="../static/js/main.js"></script>
 </head>
-
 <body>
-    this is index1 page
-    <a href="index2.html">index2</a>
+    adf
 </body>
-
 </html>
