--- a/app/views/login.html
+++ b/app/views/login.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>星科ERP系统</title>
-    <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
-    <script type="text/javascript" src="../static/js/main.js"></script>
+    <title>星科ERP系统 - 登录</title>
 </head>
 <body>
-    adf
-    <a href="login.html">login</a>
+    login
 </body>
 </html>
