--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,6 +7,7 @@
     <title>星科ERP系统</title>
     <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
     <script type="text/javascript" src="../static/js/main.js"></script>
+    <script type="text/javascript" src="../static/js/index.js"></script>
 </head>
 <body>
     adf
