--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>星科ERP系统 - 登录</title>
+    <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="../static/js/layui/css/layui.css" type="text/css" />
+    <script type="text/javascript" src="../static/js/layui/layui.js"></script>
+    <script type="text/javascript" src="../static/js/vue/vue.min.js"></script>
+    <script type="text/javascript" src="../static/js/main.js"></script>
+    <script type="text/javascript" src="../static/js/login.js"></script>
 </head>
+
 <body>
-    login
+    <div id="app">
+        <div>
+            <input type="text" v-model="loginName" v-on:keyup.enter="loginFn" />
+        </div>
+        <div>
+            <input type="text" v-model="passWord" v-on:keyup.enter="loginFn" />
+        </div>
+        <div>
+            <button type="button" class="layui-btn" v-on:click="loginFn" v-on:keyup.enter="loginFn">登录</button>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        var $vm = new Vue({
+            el: "#app",
+            data: {
+                loginName: "",
+                passWord: ""
+            },
+            methods: {
+                loginFn: function () {
+                    alert(this.loginName);
+                }
+            }
+        });
+    </script>
 </body>
+
 </html>
