--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,21 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>星科ERP系统 - 登录</title>
     <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="../static/css/login.css" type="text/css" />
     <link rel="stylesheet" href="../static/js/layui/css/layui.css" type="text/css" />
 </head>
 
 <body>
-    <div id="app">
-        <div>
-            <input type="text" v-model="loginName" v-on:keyup.enter="loginFn" />
+    <form class="layui-form">
+        <div id="app" v-on:keyup.enter="loginFn">
+            <div class="layui-form-item">
+                <label class="layui-form-label">用户名：</label>
+                <div class="layui-inline">
+                    <input type="text" id="loginName" v-model="loginName" class="layui-input" placeholder="用户名" />
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">密 码：</label>
+                <div class="layui-inline">
+                    <input type="text" id="passWord" v-model="passWord" class="layui-input" placeholder="密 码" />
+                </div>
+            </div>
+            <div class="layui-form-item" style="text-align: center;">
+                <button type="button" class="layui-btn" v-on:click="loginFn">登录</button>
+            </div>
         </div>
-        <div>
-            <input type="text" v-model="passWord" v-on:keyup.enter="loginFn" />
-        </div>
-        <div>
-            <button type="button" class="layui-btn" v-on:click="loginFn" v-on:keyup.enter="loginFn">登录</button>
-        </div>
-    </div>
+    </form>
 
     <script type="text/javascript" src="../static/js/layui/layui.js"></script>
     <script type="text/javascript" src="../static/js/vue/vue.min.js"></script>
