--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../static/css/main.css" type="text/css" />
     <link rel="stylesheet" href="../static/css/login.css" type="text/css" />
     <link rel="stylesheet" href="../static/js/layui/css/layui.css" type="text/css" />
+    <script type="text/javascript" src="../static/js/main.js"></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">密 码：</label>
                 <div class="layui-inline">
-                    <input type="text" id="passWord" v-model="passWord" class="layui-input" placeholder="密 码" />
+                    <input type="password" id="passWord" v-model="passWord" class="layui-input" placeholder="密 码" />
                 </div>
             </div>
             <div class="layui-form-item" style="text-align: center;">
@@ -34,7 +35,6 @@
 
     <script type="text/javascript" src="../static/js/layui/layui.js"></script>
     <script type="text/javascript" src="../static/js/vue/vue.min.js"></script>
-    <script type="text/javascript" src="../static/js/main.js"></script>
     <script type="text/javascript" src="../static/js/login.js"></script>
 </body>
 
